actividad de customer

--- a/app/src/main/res/layout/activity_customer.xml
+++ b/app/src/main/res/layout/activity_customer.xml
@@ -39,6 +39,8 @@
         android:layout_height="120dp"
         android:layout_marginTop="36dp"
         android:text="Fontanería"
+        android:backgroundTint="#337FBF"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/electricistaButton"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,6 +52,8 @@
         android:layout_height="120dp"
         android:layout_marginTop="168dp"
         android:text="Limpieza"
+        android:backgroundTint="#337FBF"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/electricistaButton"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,6 +65,8 @@
         android:layout_height="120dp"
         android:layout_marginTop="36dp"
         android:text="Instalaciones Eléctricas"
+        android:backgroundTint="#337FBF"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/fontaneriaButton"
@@ -74,6 +80,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         android:text="Pintura"
+        android:backgroundTint="#337FBF"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/fontaneriaButton"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
