--- a/app/src/main/res/layout/activity_profile_photo.xml
+++ b/app/src/main/res/layout/activity_profile_photo.xml
@@ -43,13 +43,14 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="24dp"
-        android:adjustViewBounds="true"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPhoto"
-        tools:srcCompat="@drawable/logofixerjpg" />
+        app:srcCompat="@drawable/logofixer"
+
+        />
 
 
     <Button
