--- a/app/src/main/res/layout/activity_list_services.xml
+++ b/app/src/main/res/layout/activity_list_services.xml
@@ -18,6 +18,58 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/framelayout" />
 
+
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/fixer"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/textServicios"
+            android:layout_width="wrap_content"
+            android:layout_height="600dp"
+            android:src="@drawable/listaactividad"
+            android:layout_gravity="center"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:adjustViewBounds="true"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Calificar Servicio"
+            android:id="@+id/calificarServicio"
+            android:layout_gravity="center"
+            android:backgroundTint="#006C81"
+            />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Calificar a servicios"
+            android:id="@+id/volverAlMenu"
+            android:layout_gravity="center"
+            android:backgroundTint="#006C81"
+            />
+
+    </LinearLayout>
+    </ScrollView>
+
     <LinearLayout
         android:id="@+id/bottom_navigation"
         android:layout_width="0dp"
