--- a/app/src/main/res/layout/item_person.xml
+++ b/app/src/main/res/layout/item_person.xml
@@ -34,6 +34,16 @@
         app:layout_constraintTop_toBottomOf="@+id/personName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+    <TextView
+        android:id="@+id/tituloCalificacion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:gravity="center"
+        android:text="Calificación actual:"
+        app:layout_constraintTop_toBottomOf="@+id/personJobDescription"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <RatingBar
         android:id="@+id/personRating"
@@ -41,7 +51,7 @@
         android:layout_height="wrap_content"
         android:numStars="5"
         android:stepSize="0.5"
-        app:layout_constraintTop_toBottomOf="@+id/personJobDescription"
+        app:layout_constraintTop_toBottomOf="@+id/tituloCalificacion"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
